package main.macowin.domain.states;

public interface State {
    Double getPrice(Double basePrice);
}
